# CapitalDelivery-Risk

./: .gitignore  README.md  pyproject.toml
docs/: data_cleaning_rules.md  kpi_definitions.md  risk_model.md
reports/figures/: model_comparison_metrics.csv
scripts/: build_db.py  compare_models.py  explain_model.py  fetch_raw_data.py  risk_model_lib.py  score_projects.py  train_risk_model.py
sql/: 01_stage_syip.sql  02_stage_dashboard.sql  03_build_projects.sql  04_stage_contracts.sql  05_kpi_summary.sql  06_model_features.sql
tests/: test_kpi_summary.py  test_projects_table.py  test_raw_data_sanity.py  test_risk_model.py
