[project]
name = "capital-delivery-risk"
version = "0.1.0"
description = "Public-data capital delivery risk dashboard (VDOT SYIP) — SQL/BI/explainable risk modeling portfolio project"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "duckdb>=1.5.4",
    "fastapi>=0.139.0",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "requests>=2.34.2",
    "scikit-learn>=1.9.0",
    "uvicorn[standard]>=0.51.0",
]
